added user registration and activation
